--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<h1>Cliente</h1><input type='text' placeholder='Nome'><br><br><input type='text' placeholder='sobrenome'><br><br><input type='text' placeholder='email'><br><br><input type='text' placeholder='telefone'><br><br><input type='submit' value='SUBMIT'>
+<h1>FORM<br></h1><input type='text' placeholder'nome' value='nome'><br><br><input type='email' placeholder'email' value='email'><br><br><input type='password' placeholder'password' value='password'><br><br><input type='int' placeholder'id' value='id'><br><br><input type='submit' value='SUBMIT'><br>
